--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap");
 :root {
-  --main-color: #db4437;
+  --main-color: #3f51b5;
   --white-color: white;
 }
 .App {
